# openDatasets

./: .gitignore  README.md  env.yml  environment.yml  proc_chembl.cpp  process_molecules.py  pyproject.toml  requirements.txt
cpp/: CMakeLists.txt  proc_chembl.cpp
odd_datasets/: alembic.ini  cli.py  models.py
odd_datasets/collections/: base.py  conformers.py  non_covalents.py  peptides.py  utils.py
odd_datasets/migrations/: env.py
odd_datasets/preprocessing/: non_covalents.py  process_molecules.py  small_molecules.py
opendata/: cli.py  utils.py
opendata/collections/: conformers.py  non_covalents.py  peptides.py  small_molecules.py  specs.py  utils.py
opendata/conformers/: conformers.py  generator.py  replica_exchange copy.py  replica_exchange.py  replicat_exchange.py  simple_md.py  utils.py
opendata/preprocessing/: _pocketutils.py  complexes.py  non_covalents.py  peptides.py  pockets.py  small_molecules.py  utils.py
opendata/to_delete/: non_covalents.py
python/: process_molecules.py
slurm/: preprocess_peptides.sh  preprocess_sm.sh
